--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@y0c/react-datepicker": "^0.3.5",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.11.0",
-    "react": "^16.8.3",
+    "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.4",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
