--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@y0c/react-datepicker": "^0.3.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "js-cookie": "^2.2.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-cookie": "^3.0.8",
     "react-dom": "^16.8.4",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
