--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-cookie": "^3.0.8",
+    "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.4",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
