--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-cookie": "^3.0.8",
     "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.4",
+    "react-notifications-component": "^1.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
