Added toastify dependency and functions to use it

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-cookie": "^3.0.8",
     "react-datepicker": "^2.2.0",
     "react-dom": "^16.8.4",
-    "react-notifications-component": "^1.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-toastify": "^5.0.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
